# docs/swagger.yaml
@@ -124,13 +124,6 @@ definitions:
       role:
         type: string
     type: object
-  http.NullableTime:
-    properties:
-      time:
-        type: string
-      valid:
-        type: boolean
-    type: object
   http.createProjectRequest:
     properties:
       description:
@@ -149,7 +142,7 @@ definitions:
       assignee_id:
         type: integer
       completion_date:
-        $ref: '#/definitions/http.NullableTime'
+        $ref: '#/definitions/sql.NullTime'
       description:
         type: string
       priority:
@@ -320,6 +313,69 @@ paths:
       summary: Update a project in the repository
       tags:
       - projects
+  /projects/{id}/tasks:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Project ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Task'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Object'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Object'
+      summary: Get tasks for a project
+      tags:
+      - projects
+  /projects/search:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Project title
+        in: query
+        name: title
+        type: string
+      - description: Manager ID
+        in: query
+        name: manager
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Project'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Object'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Object'
+      summary: Search projects by title or manager ID
+      tags:
+      - projects
   /tasks:
     get:
       consumes:
@@ -460,6 +516,51 @@ paths:
       summary: Update a task in the repository
       tags:
       - tasks
+  /tasks/search:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Task title
+        in: query
+        name: title
+        type: string
+      - description: Task status
+        in: query
+        name: status
+        type: string
+      - description: Task priority
+        in: query
+        name: priority
+        type: string
+      - description: Assignee ID
+        in: query
+        name: assignee
+        type: integer
+      - description: Project ID
+        in: query
+        name: project
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Task'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Object'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Object'
+      summary: Search tasks
+      tags:
+      - tasks
   /users:
     get:
       consumes:
@@ -598,6 +699,65 @@ paths:
           schema:
             $ref: '#/definitions/response.Object'
       summary: Update a user in the repository
+      tags:
+      - users
+  /users/{id}/tasks:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Task'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Object'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Object'
+      summary: Get tasks for a specific user
+      tags:
+      - users
+  /users/search:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: User name
+        in: query
+        name: name
+        type: string
+      - description: User email
+        in: query
+        name: email
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.User'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Object'
+      summary: Search users by name or email
       tags:
       - users
 swagger: "2.0"
